Bug 79409 - EDITING: Impossible to make choice in Input list in a section with Protection
Summary: EDITING: Impossible to make choice in Input list in a section with Protection
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other All
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: BSA target:5.0.0 target:4.4.7
Keywords: bibisected, bisected, regression
: 63800 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-29 11:16 UTC by dobra.gab
Modified: 2015-12-17 08:22 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
this introduces the bug (9.09 KB, application/vnd.oasis.opendocument.text)
2014-05-29 11:22 UTC, dobra.gab
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dobra.gab 2014-05-29 11:16:46 UTC
Problem description: Input list with Protection

Steps to reproduce:
1. Insert an Input List into the text.
2. Add a Section containing it, and tick Protected
3. Try to select anything from that input list, you can't apply that (You can't choose other option than default)

Current behavior:

There is no way to make a document Protected (or even Read-only) with Input Lists editable inside. It is still on in v4.3.0 Beta

Expected behavior:

Input Lists in Protected documents should be editable in Protected Sections. Btw it is working on AOO.
Operating System: All
Version: 4.2.0.4 release
Comment 1 dobra.gab 2014-05-29 11:22:12 UTC
Created attachment 100103 [details]
this introduces the bug
Comment 2 Yousuf Philips (jay) (retired) 2014-05-31 03:00:55 UTC
From what i understood from what you said, i'm unable to preproduce it. Maybe you can send in a screencast or some screenshots of the steps.
Comment 3 dobra.gab 2014-05-31 11:32:53 UTC
Look at the attached document. In the first part the Input List and and the Input Field are in a protected Section. In the 2nd part the same are in an unprotected Section (or not even in a Section). The input list and field are uneditable in the Protected Section (both at LO 4.2 versions), however, in older LO/OOo versions they are well editable, working fine. Apache OO had the same issue, it is fixed for months there. In LO 4.3 Beta only the Input Fields are fixed, (and it is considered as a bug according to Release Changes,) Input Lists are still problematic.
Comment 4 Yousuf Philips (jay) (retired) 2014-06-03 00:29:55 UTC
Confirmed in Linux Mint in the latest releases from 4.0 to 4.2 and 4.3 beta. In LibO 3.6.7, it was possible to change the input list from item1 to item2.
Comment 5 Joel Madero 2014-06-09 17:01:01 UTC
Normal - prevents high quality work
Medium - would be low because this won't affect many users but it's a regression so I bumped it to medium

 79e02001f27d33b3b478324ab6fba5683413b4d9 is the first bad commit
commit 79e02001f27d33b3b478324ab6fba5683413b4d9
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Tue Dec 11 04:56:54 2012 +0000

    source-hash-b6c016da23d309b4ac7d154bc33a22397974ed73
    
    commit b6c016da23d309b4ac7d154bc33a22397974ed73
    Author:     Tor Lillqvist <tml@iki.fi>
    AuthorDate: Mon Nov 19 11:16:15 2012 +0200
    Commit:     Tor Lillqvist <tlillqvist@suse.com>
    CommitDate: Mon Nov 19 12:26:44 2012 +0200
    
        Use gb_VISIBILITY_FLAGS
    
        Change-Id: I6be70c0b8d73f4d1d1428c0df94ea6d8bdc782f7

:100644 100644 26157d38356b3591abc92ee949953d37ac93201f 99e65e2d132b0f467d52718cb5574bbd276b84c5 M	autogen.log
:100644 100644 5f3674b08eed2ed4a5a89db302b5a9c11e5cc33e d1dffcac5e20f137981a1ee53d82819296660d8f M	ccache.log
:100644 100644 1b372eb248c5d4846b8e34b67c97c86ee2137d7a e90409ec8ead05c8fe982311c4fad9412f935b8b M	commitmsg
:100644 100644 fe6de78bab06d66b4dcc7daf3e8da0a9bd028bcd 76efee933474fa0d7569b3e6f0943d3bd9dc876a M	dev-install.log
:100644 100644 15080cbc9084e133603b9c0a387bc9f590c8e05b 3891157aa7844c43f80ea5b431309453836479b8 M	make.log
:040000 040000 af9223892695b7550d228ad3a89f09d98ffb9e44 5522d7515450a2abddaca0ef2d8c2d6e5d03572a M	opt

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# bad: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect bad e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [8f4aeaad2f65d656328a451154142bb82efa4327] source-hash-1885266f274575327cdeee9852945a3e91f32f15
git bisect good 8f4aeaad2f65d656328a451154142bb82efa4327
# bad: [9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02] source-hash-8600bc24bbc9029e92bea6102bff2921bc10b33e
git bisect bad 9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02
# good: [51b63dca7427db64929ae1885d7cf1cc7eb0ba28] source-hash-806d18ae7b8c241fe90e49d3d370306769c50a10
git bisect good 51b63dca7427db64929ae1885d7cf1cc7eb0ba28
# bad: [d65a58c31c8da044ef66ae4517fa2fe74cec0019] source-hash-2e053cf5ea4d93a2e1845e795a9c7fe1e08c84af
git bisect bad d65a58c31c8da044ef66ae4517fa2fe74cec0019
# bad: [79e02001f27d33b3b478324ab6fba5683413b4d9] source-hash-b6c016da23d309b4ac7d154bc33a22397974ed73
git bisect bad 79e02001f27d33b3b478324ab6fba5683413b4d9
# good: [183a576d94de9a9439d580c8b81f335ab57cdbdc] source-hash-a599f5b4b51848e3b397d471c9d12b373caadcef
git bisect good 183a576d94de9a9439d580c8b81f335ab57cdbdc
# good: [a67b874d60de1f1a44bef57a53a7b8a84db0ba58] source-hash-19f4ebd8a54da0ae03b9cc8481613e5cd20ee1e7
git bisect good a67b874d60de1f1a44bef57a53a7b8a84db0ba58
# good: [221bf5c0db153e24c67ff29fe614af7cc010a356] source-hash-9210b95bcfd65ae558f445666d9b880e794d4c74
git bisect good 221bf5c0db153e24c67ff29fe614af7cc010a356
# first bad commit: [79e02001f27d33b3b478324ab6fba5683413b4d9] source-hash-b6c016da23d309b4ac7d154bc33a22397974ed73
Comment 6 dobra.gab 2014-06-10 12:55:27 UTC
So in what version is it gonna be fixed? Thanks anyway.
Comment 7 Yousuf Philips (jay) (retired) 2014-06-10 14:31:54 UTC
(In reply to comment #6)
> So in what version is it gonna be fixed? Thanks anyway.

Presently we are tracking down where the problem is located and then a developer will fix the issue for an upcoming release.
Comment 8 Björn Michaelsen 2014-10-11 13:31:46 UTC
In the bibisect range 9210b95bcfd65ae558f445666d9b880e794d4c74..b6c016da23d309b4ac7d154bc33a22397974ed73 there are 8 writer commit. This one looks suspicious:

commit dcb080347ca127044313bbb3c11c37761cc2a7a2
Author: Cédric Bosdonnat <cedric.bosdonnat@free.fr>
Date:   Fri Nov 16 13:37:04 2012 +0100

    n#780277: select field when clicking it instead of having cursor before it
    
    Change-Id: I93d623b62e9357a71bfca3403cc98092ef58c7e4

CC'ing Cedric -- maybe its a simple fix.
Comment 9 Björn Michaelsen 2014-10-16 14:59:23 UTC
(This is an automated message.)

It seems that the commit that caused this regression was identified. (Or at least a commit is suspected as the offending one.)

Thus setting keyword "bisected".
Comment 10 Andras Timar 2014-11-20 10:31:23 UTC
I don't see how dcb080347ca127044313bbb3c11c37761cc2a7a2 could be related. I reverted in master and it did not help. However, I proposed a change in gerrit, which solves this bug.

https://gerrit.libreoffice.org/#/c/12983/
Comment 11 Commit Notification 2015-01-07 16:11:57 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7a091b24ef3abc2f27bfaebdd47714d936f4e9c9

fdo#79409 allow selection from list field in protected section

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Kulo 2015-06-08 12:18:25 UTC
*** Bug 63800 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2015-10-27 16:24:20 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d1f43eaf45225218ee9329e3b89ba34306e722a2&h=libreoffice-4-4

fdo#79409 allow selection from list field in protected section

It will be available in 4.4.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Robinson Tryon (qubit) 2015-12-17 08:22:16 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]