fdo#79409 allow selection from list field in protected section

Change-Id: I4840ab7e24c8569aea727a537e00e88a8e9ed15b
Reviewed-on: https://gerrit.libreoffice.org/12983
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 7a091b24ef3abc2f27bfaebdd47714d936f4e9c9)
Reviewed-on: https://gerrit.libreoffice.org/19625
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>